<resources>
    <string name="app_name">PhiHome</string>
    <string name="loading">加载中&#8230;</string>
    <string name="app_exit_hit">再按一次退出程序</string>
    <string name="next_step">下一步</string>
    <string name="submit">提交</string>
    <string name="save">保存</string>


    <!--账号入口相关-->
    <string name="title_login_cloud">云账号登录</string>
    <string name="login">登录</string>
    <string name="exit_login">退出登录</string>
    <string name="login_user_hint">请输入11位的手机号码</string>
    <string name="login_pwd_hint">请输入密码</string>
    <string name="login_user_illegal">请输入正确的手机号</string>
    <string name="login_pwd_illegal">请输入正确的密码</string>
    <string name="login_auth_fail">未获取到授权码</string>
    <string name="login_token_fail">登录失败</string>
    <string name="logout_success">已登出</string>
    <string name="register">注册</string>
    <string name="forget_pwd">忘记密码？</string>
    <string name="register_now">立即注册</string>
    <string name="get_verification_code">获取验证码</string>
    <string name="phone">手机号</string>
    <string name="captcha">图形验证码</string>
    <string name="captcha_not_request">请先获取图形验证码</string>
    <string name="captcha_illegal">请输入正确的图形验证码</string>
    <string name="captcha_failure">获取图形验证码失败</string>
    <string name="verifiaction_code">验证码</string>
    <string name="get_vercode_success">获取验证码成功</string>
    <string name="verifiaction_code_illegal">请输入正确的短信验证码</string>
    <string name="password">密码</string>
    <string name="password_comfirm">确认密码</string>
    <string name="password_set">设置密码</string>
    <string name="register_pwd_illegal">请输入合法的密码</string>
    <string name="register_pwd_diff">两次输入的密码不一致</string>
    <string name="register_no_info">请重新输入信息</string>
    <string name="register_success">注册成功</string>
    <string name="check_phone_already_register">该手机号已注册，你可以直接登录</string>
    <string name="login_welcom_phihome">欢迎来到 PhiHome</string>


    <string name="common_image_description">通用图片描述</string>
    <string name="add_device">添加设备</string>
    <string name="reset_hint">接通电源，长按开关5s,直至指示灯红色闪烁。</string>

    <string name="add_x1_smart_inserts">添加X1智能排插</string>
    <string name="add_smart_devices">添加智能设备</string>
    <string name="device_connect_to_router">设备连接到路由器</string>
    <string name="will_connect_device_to_router">将设备连接到路由器</string>
    <string name="getting_wifi">正在获取WIFI，请稍后……</string>
    <string name="get_wifi_fail">获取wifi失败，请稍后再试</string>
    <string name="get_device_wifi_fail">获取设备wifi失败，请稍后再试</string>
    <string name="write_ssid_info_fail">写入ssid信息失败</string>
    <string name="write_ssid_info_success">写入ssid信息成功</string>
    <string name="input_wifi_password">请输入WIFI密码</string>
    <string name="only_support_2.4_wifi">仅支持2.4G频段的无线网络</string>
    <string name="connect">连接</string>
    <string name="auto_open_wifi_fail">自动开启wifi失败，请手动开启</string>
    <string name="get_wifi_info_fail">获取wifi信息失败，请稍后再试</string>
    <string name="close_device_soft_ap">设备与路由器及网络连接成功，将关闭设备ssid</string>
    <string name="close_device_soft_ap_success">关闭设备成功</string>
    <string name="device">设备</string>
    <string name="scene">场景</string>
    <string name="mine">我的</string>

    <!--插座开关-->
    <string name="page_socket_control">插座</string>
    <string name="scoket1">插孔1</string>
    <string name="scoket2">插孔2</string>
    <string name="scoket3">插孔3</string>
    <string name="scoket4">插孔4</string>
    <string name="scoket5">插孔5</string>
    <string name="scoket6">插孔6</string>


    <string name="empty_no_data">There is no data, Click Retry</string>
    <string name="empty_network_error">Network error, Click Retry</string>

    <string name="nickname">昵称</string>
    <string name="home_manage">家庭管理</string>
    <string name="my_home">我的家</string>
    <string name="message_reminding">消息提醒</string>
    <string name="about">关于</string>
    <string name="title_activity_personal_information">PersonalInformationActivity</string>
    <string name="me">我</string>
    <string name="head_portrait">头像</string>
    <string name="not_set">未设置</string>
    <string name="space_phone_number">18579465666</string>
    <string name="modify_password">修改密码</string>
    <string name="take_a_photo">拍照</string>
    <string name="get_a_photo_from_mobile_album">从手机相册选择</string>
    <string name="cancel">取消</string>
    <string name="crop">裁剪</string>

    <string name="old_password">旧密码</string>
    <string name="new_password">新密码</string>
</resources>
