<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f5f5"
    android:orientation="vertical">

    <include layout="@layout/include_common_header" />

    <RelativeLayout
        android:id="@+id/rl_head_portrait"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_head_portrait"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:text="@string/head_portrait" />

        <ImageView
            android:id="@+id/iv_right_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/icon_indicator" />

        <ImageView
            android:id="@+id/iv_head_portrait"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_toLeftOf="@+id/iv_right_arrow"
            android:layout_toStartOf="@+id/iv_right_arrow"
            android:scaleType="fitXY"
            android:src="@mipmap/ic_launcher" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_nickname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_nickname_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:text="@string/nickname" />

        <TextView
            android:id="@+id/tv_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:drawableEnd="@drawable/icon_indicator"
            android:drawableRight="@drawable/icon_indicator"
            android:gravity="center_vertical"
            android:src="@drawable/icon_indicator"
            android:text="@string/not_set" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/rl_mobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_mobile_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:text="@string/nickname" />

        <TextView
            android:id="@+id/tv_mobile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:drawableEnd="@drawable/icon_indicator"
            android:drawableRight="@drawable/icon_indicator"
            android:gravity="center_vertical"
            android:src="@drawable/icon_indicator"
            android:text="@string/space_phone_number" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/icon_indicator"
        android:drawableRight="@drawable/icon_indicator"
        android:gravity="center_vertical"
        android:paddingEnd="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingStart="5dp"
        android:text="@string/modify_password" />

    <Button
        android:id="@+id/btn_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:paddingEnd="50dp"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:paddingStart="50dp"
        android:text="@string/exit_login" />
</LinearLayout>
