<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_add_smart_inserts"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.phicomm.phihome.activity.SoftApResetActivity"
    tools:showIn="@layout/activity_soft_ap_reset">

    <include
        android:id="@+id/title_layout"
        layout="@layout/include_common_header" />

    <TextView
        android:id="@+id/tv_reset_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/reset_hint" />

    <ImageView
        android:id="@+id/iv_show"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_below="@+id/tv_reset_hint"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"
        android:contentDescription="@string/common_image_description"
        android:src="@drawable/ico_home_focus" />

    <TextView
        android:id="@+id/tv_next_step"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/black_border"
        android:text="@string/next_step"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_marginTop="120dp"
        android:layout_below="@+id/iv_show"
        android:layout_centerHorizontal="true"
        />
    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"/>
</RelativeLayout>
