<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/include_common_header" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:id="@+id/ll_nickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_head_portrait"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:src="@mipmap/empty_icon" />

                <TextView
                    android:id="@+id/tv_nickname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/icon_indicator"
                    android:drawableRight="@drawable/icon_indicator"
                    android:gravity="center_vertical"
                    android:text="@string/nickname" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/ll_home_manage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"
                    android:drawableLeft="@drawable/ico_home"
                    android:drawablePadding="5dp"
                    android:drawableStart="@drawable/ico_home"
                    android:gravity="center_vertical"
                    android:text="@string/home_manage" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/icon_indicator"
                    android:drawableRight="@drawable/icon_indicator"
                    android:gravity="center_vertical|end"
                    android:text="@string/my_home" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_message_reminding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"
                    android:drawableEnd="@drawable/icon_indicator"
                    android:drawableLeft="@drawable/ico_home"
                    android:drawablePadding="5dp"
                    android:drawableRight="@drawable/icon_indicator"
                    android:drawableStart="@drawable/ico_home"
                    android:gravity="center_vertical"
                    android:text="@string/message_reminding" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/ll_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"
                    android:drawableEnd="@drawable/icon_indicator"
                    android:drawableLeft="@drawable/ico_home"
                    android:drawablePadding="5dp"
                    android:drawableRight="@drawable/icon_indicator"
                    android:drawableStart="@drawable/ico_home"
                    android:gravity="center_vertical"
                    android:text="@string/about" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</LinearLayout>